--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Svelte App</title>
+    <title>Time</title>
   </head>
   <body>
     <script type="module" src="/src/index.ts"></script>
